# webrtc_audio_processing

./: Makefile.am  README.md  Readme.txt  audio_test_main  audio_test_main.cc  configure.ac  meson.build  meson_options.txt
data/: byby_8K_1CH_16bit.pk  cool-edit-vol-(+12db)-byby_8K_1CH_16bit.pk  cool-edit-vol-2x-byby_8K_1CH_16bit.pcm  cool-edit-vol-2x-byby_8K_1CH_16bit.pk  cool-edit-vol-add-12db-byby_8K_1CH_16bit.pcm  lhydd_32K_1CH_16bit.pcm  lhydd_32K_1CH_16bit.pk  mic_in_1ch_8k_16bit.pk  speaker_out_1ch_8k_16bit.pk
webrtc/: meson.build
webrtc/base/: meson.build
webrtc/common_audio/: meson.build
webrtc/modules/: meson.build
webrtc/modules/audio_coding/: meson.build
webrtc/modules/audio_processing/: meson.build
webrtc/modules/interface/: meson.build
webrtc/system_wrappers/: meson.build
