option('ns_mode', type: 'combo',
       choices : ['float', 'fixed'],
       description: 'Noise suppresion mode to use.')
option('gnustl', type: 'feature',
       value: 'auto',
       description: 'Use gnustl for a c++ library implementation (only used on Android)')
option('neon', type: 'combo',
       choices: ['no', 'yes', 'auto', 'runtime'],
       description: '')
